--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -1,66 +1,20 @@
 *
 {
     all: unset;
-}
-
-/* launcher */
-
-.launchermenu
-{
-    background-color: #1D1F28;
-    border-radius: 8px;
-    //border: 2px solid #2f354b;
-}
-
-.launcher-icon
-{
-    margin-top: 10px;
-    margin-left: 0px;
-    margin-bottom: 10px;
-}
-
-.launcher-pfp-label
-{
-    font-family: Inconsolata Semi Condensed Medium;
-    font-size: 20px;
-    margin-left: 10px;
-}
-
-.launcher-pfp-label2
-{
-    font-family: Inconsolata Semi Condensed Medium;
-    font-size: 25px;
-    margin-left: 10px;
-    margin-top: 20px;
-}
-
-.launcher-btn
-{
-    color: #D9E0EE;
-    font-family: Material Design Icons Desktop;
-    font-size: 20px;
-    margin-top: 25px;
-}
-
-.launcher-btn:hover
-{
-    color: #F28FAD;
-    font-family: Material Design Icons Desktop;
-    font-size: 20px;
-    margin-top: 25px;
+    color: #cdd6f4;
 }
 
 /* Calendar */
 
 .cal-box {
-  background-color: #1D1F28;
+  background-color: #181825;
   border-radius: 8px;
   //border: 2px solid #2f354b;
   font-family: JetBrainsMonoMedium Nerd Font;
-  font-size: .9em;
+  font-size: 1.2em;
 
   .cal-inner-box {
-      padding: 1rem 1rem .2rem;
+      padding: 1rem 1rem .3rem 1rem;
 
       .cal {
           &.highlight {
@@ -74,11 +28,11 @@
 }
 
 calendar:selected {
-  color: #C574DD;
+  color: #cba6f7;
 }
 
 calendar.header {
-color: #D9E0EE;
+color: #cdd6f4;
 font-weight: bold;
 }
 
@@ -87,10 +41,12 @@ color: #C574DD;
 }
 
 calendar.highlight {
-color: #C574DD;
+color: #89b4fa;
 font-weight: bold;
 }
 
 calendar:indeterminate {
 color: #8C8C8C;
 }
+
+
